--- a/index.html
+++ b/index.html
@@ -260,67 +260,67 @@
   <div id="actualZoneGridContainer" style="display: flex; justify-content: center;">
     <div id="actualZoneGrid">
       <!-- Row 1 -->
-      <button class="actualZoneBtn" id="actualZone-26">26</button>
-      <button class="actualZoneBtn" id="actualZone-27">27</button>
-      <button class="actualZoneBtn" id="actualZone-28">28</button>
-      <button class="actualZoneBtn" id="actualZone-29">29</button>
-      <button class="actualZoneBtn" id="actualZone-30">30</button>
-      <button class="actualZoneBtn" id="actualZone-31">31</button>
-      <button class="actualZoneBtn" id="actualZone-32">32</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-26">26</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-27">27</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-28">28</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-29">29</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-30">30</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-31">31</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-32">32</button>
 
       <!-- Row 2 -->
-      <button class="actualZoneBtn" id="actualZone-33">33</button>
-      <button class="actualZoneBtn" id="actualZone-10">10</button>
-      <button class="actualZoneBtn" id="actualZone-11">11</button>
-      <button class="actualZoneBtn" id="actualZone-12">12</button>
-      <button class="actualZoneBtn" id="actualZone-13">13</button>
-      <button class="actualZoneBtn" id="actualZone-14">14</button>
-      <button class="actualZoneBtn" id="actualZone-34">34</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-33">33</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-10">10</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-11">11</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-12">12</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-13">13</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-14">14</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-34">34</button>
 
       <!-- Row 3 -->
-      <button class="actualZoneBtn" id="actualZone-35">35</button>
-      <button class="actualZoneBtn" id="actualZone-15">15</button>
-      <button class="actualZoneBtn" id="actualZone-1">1</button>
-      <button class="actualZoneBtn" id="actualZone-2">2</button>
-      <button class="actualZoneBtn" id="actualZone-3">3</button>
-      <button class="actualZoneBtn" id="actualZone-16">16</button>
-      <button class="actualZoneBtn" id="actualZone-36">36</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-35">35</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-15">15</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-1">1</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-2">2</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-3">3</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-16">16</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-36">36</button>
 
       <!-- Row 4 -->
-      <button class="actualZoneBtn" id="actualZone-37">37</button>
-      <button class="actualZoneBtn" id="actualZone-17">17</button>
-      <button class="actualZoneBtn" id="actualZone-4">4</button>
-      <button class="actualZoneBtn" id="actualZone-5">5</button>
-      <button class="actualZoneBtn" id="actualZone-6">6</button>
-      <button class="actualZoneBtn" id="actualZone-18">18</button>
-      <button class="actualZoneBtn" id="actualZone-38">38</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-37">37</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-17">17</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-4">4</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-5">5</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-6">6</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-18">18</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-38">38</button>
 
       <!-- Row 5 -->
-      <button class="actualZoneBtn" id="actualZone-39">39</button>
-      <button class="actualZoneBtn" id="actualZone-19">19</button>
-      <button class="actualZoneBtn" id="actualZone-7">7</button>
-      <button class="actualZoneBtn" id="actualZone-8">8</button>
-      <button class="actualZoneBtn" id="actualZone-9">9</button>
-      <button class="actualZoneBtn" id="actualZone-20">20</button>
-      <button class="actualZoneBtn" id="actualZone-40">40</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-39">39</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-19">19</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-7">7</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-8">8</button>
+      <button class="actualZoneBtn strikeZone" id="actualZone-9">9</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-20">20</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-40">40</button>
 
       <!-- Row 6 -->
-      <button class="actualZoneBtn" id="actualZone-41">41</button>
-      <button class="actualZoneBtn" id="actualZone-21">21</button>
-      <button class="actualZoneBtn" id="actualZone-22">22</button>
-      <button class="actualZoneBtn" id="actualZone-23">23</button>
-      <button class="actualZoneBtn" id="actualZone-24">24</button>
-      <button class="actualZoneBtn" id="actualZone-25">25</button>
-      <button class="actualZoneBtn" id="actualZone-42">42</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-41">41</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-21">21</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-22">22</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-23">23</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-24">24</button>
+      <button class="actualZoneBtn shadowZone" id="actualZone-25">25</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-42">42</button>
 
       <!-- Row 7 -->
-      <button class="actualZoneBtn" id="actualZone-43">43</button>
-      <button class="actualZoneBtn" id="actualZone-44">44</button>
-      <button class="actualZoneBtn" id="actualZone-45">45</button>
-      <button class="actualZoneBtn" id="actualZone-46">46</button>
-      <button class="actualZoneBtn" id="actualZone-47">47</button>
-      <button class="actualZoneBtn" id="actualZone-48">48</button>
-      <button class="actualZoneBtn" id="actualZone-49">49</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-43">43</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-44">44</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-45">45</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-46">46</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-47">47</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-48">48</button>
+      <button class="actualZoneBtn nonCompetitiveZone" id="actualZone-49">49</button>
     </div>
   </div>
 </div>
