--- a/index.html
+++ b/index.html
@@ -349,16 +349,70 @@
     <button id="applyTagBtn">Apply Tag</button>
   </div>
 
-  <!-- HEATMAP GRID -->
-  <div id="heatmapGrid" style="display: none;">
-    <h3>Heat Map</h3>
-    <div id="heatmapContainer" style="display: flex; justify-content: center;">
-      <div id="heatmap">
-        <!-- EXACT same structure as pitchLocationGrid but with "heatmap-##" IDs -->
-        <!-- ... 7x7 layout ... -->
+<!-- Heatmap Grid -->
+    <div id="heatmapGrid" style="display:none;">
+      <h3>Heat Map</h3>
+      <div id="heatmapContainer" style="display: flex; justify-content: center;">
+        <div id="heatmap">
+          <!-- Row 1 -->
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-26">26</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-27">27</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-28">28</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-29">29</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-30">30</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-31">31</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-32">32</button>
+          <!-- Row 2 -->
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-33">33</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-10">10</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-11">11</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-12">12</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-13">13</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-14">14</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-34">34</button>
+          <!-- Row 3 -->
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-35">35</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-15">15</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-1">1</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-2">2</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-3">3</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-16">16</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-36">36</button>
+          <!-- Row 4 -->
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-37">37</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-17">17</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-4">4</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-5">5</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-6">6</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-18">18</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-38">38</button>
+          <!-- Row 5 -->
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-39">39</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-19">19</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-7">7</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-8">8</button>
+          <button class="heatmapBtn strikeZone" id="heatmap-9">9</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-20">20</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-40">40</button>
+          <!-- Row 6 -->
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-41">41</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-21">21</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-22">22</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-23">23</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-24">24</button>
+          <button class="heatmapBtn shadowZone" id="heatmap-25">25</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-42">42</button>
+          <!-- Row 7 -->
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-43">43</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-44">44</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-45">45</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-46">46</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-47">47</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-48">48</button>
+          <button class="heatmapBtn nonCompetitiveZone" id="heatmap-49">49</button>
+        </div>
       </div>
     </div>
-  </div>
 
   <!-- Outcome Selection -->
   <div id="outcomeSelection" style="display:none;">
