--- a/index.html
+++ b/index.html
@@ -405,6 +405,16 @@
       <!-- JS populates the rest -->
     </select>
   </label>
+  <label style="margin-left:6px;">Result
+    <select id="filterResult">
+      <option value="all">All results</option>
+      <option value="strike">Strike</option>
+      <option value="ball">Ball</option>
+      <option value="swing">Swing</option>
+      <option value="inPlay">In Play</option>
+      <option value="hbp">HBP</option>
+    </select>
+  </label>
   <label style="margin-left:6px;">Batter
     <select id="filterBatter">
       <option value="all">All</option>
