--- a/index.html
+++ b/index.html
@@ -95,12 +95,17 @@
     
       <!-- per-pitch-type -->
       <table class="liveTbl" id="tbl-pitchType">
-        <thead><tr>
-          <th>Pitch</th><th>IZ%</th><th>OOZ%</th>
-          <th>CSW%</th><th>Strike%</th><th>Swing%</th>
-        </tr></thead>
+        <thead>
+          <tr>
+            <th>Pitch</th><th>IZ%</th><th>OOZ%</th><th>CSW%</th>
+            <th>Strike%</th><th>Swing%</th>
+            <!-- NEW columns -->
+            <th>Fly%</th><th>GB%</th><th>LD%</th>
+          </tr>
+        </thead>
         <tbody></tbody>
       </table>
+
     
       <!-- per-batter -->
       <table class="liveTbl" id="tbl-batter">
