--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
     <div id="stats-overall">
       <span id="stat-swing">Swing%: 0</span> |
       <span id="stat-csw">CSW%: 0</span> |
+      <span id="stat-ipo">IPO%: 0</span> |
       <span id="stat-iz">IZ%: 0</span> |
       <span id="stat-ooz">OOZ%: 0</span> |
       <span id="stat-strike">Strike%: 0</span>
     </div>
     <div id="stats-early" style="font-size:.9em;">
-      Early (<1 strike) – 
+      Early (&lt;2 strikes) – 
       <span id="stat-early-csw">CSW% 0</span> •
       <span id="stat-early-strike">Strike% 0</span>
     </div>
