--- a/index.html
+++ b/index.html
@@ -543,6 +543,14 @@
     <ul id="pitchLog"></ul>
   </div>
 
+  <!-- NEW: At‑Bat Summary -->
+  <div id="atBatSummary">
+    <h3>At‑Bat Summary</h3>
+    <ul id="atBatLog"></ul>
+  </div>
+  <!-- Button to export the at‑bat summary to clipboard -->
+  <button id="exportAtBatBtn" style="margin-top: 20px;">Export At‑Bat Summary</button>
+
   <button id="exportBtn" style="margin-top: 20px;">Export Stats</button>
   <button id="heatMapBtn" style="margin-top: 20px;">Heat Map</button>
   <button id="nextBatterBtn" style="margin-top: 20px;">Next Batter</button>
