--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
     <select id="batterSelect" style="margin-left:8px;"></select>
   </div>
 
+  <!-- PITCHER MANAGEMENT -->
+  <div id="pitcherControls">
+    <input  id="newPitcherName" placeholder="Pitcher name">
+    <select id="newPitcherHand">
+      <option value="RH">RH</option>
+      <option value="LH">LH</option>
+    </select>
+    <button id="addPitcherBtn">Add Pitcher</button>
+  
+    <select id="pitcherSelect"></select>
+  </div>
+    
   <!-- ========= LIVE STATS ========= -->
   <div id="liveStatsBoard">
     <h3 style="margin:4px 0;">Live Stats</h3>
