--- a/index.html
+++ b/index.html
@@ -69,83 +69,11 @@
         </thead>
         <tbody></tbody>
       </table>
-    
-        <thead>
-          <tr>
-            <th>Pitch</th><th>IZ%</th><th>OOZ%</th><th>CSW%</th>
-            <th>Strike%</th><th>Swing%</th><th>Fly%</th><th>GB%</th><th>LD%</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- rows still rendered by script.js -->
-        </tbody>
-      </table>
     </div>
-
+    
     <!-- MAIN PANEL: everything else -->
     <div id="mainPanel" class="main-panel">
       <h2 id="modeTitle">Live BP Mode</h2>
-
-      <!-- batter + pitcher controls -->
-      <div id="batterManagement">…</div>
-      <div id="pitcherControls">…</div>
-
-      <!-- overall headline stats -->
-      <div id="liveStatsBoard">
-        <div id="stats-overall">…</div>
-        <div id="stats-early">…</div>
-        <div id="stats-late">…</div>
-      </div>
-
-      <!-- pitch-type / location / outcome UI, point mode, heatmap, etc. -->
-      <div id="pointsContainer">…</div>
-      <div id="pitchTypeSelection">…</div>
-      <div id="comboPitchTypeSelection">…</div>
-      <div id="pitchLocationSelection">…</div>
-      <div id="outcomeSelection">…</div>
-      <div id="inPlaySelection">…</div>
-      <div id="heatmapGrid">…</div>
-
-      <!-- pitch log summary -->
-      <div id="pitchLogSummary">…</div>
-
-      <!-- at-bat summary export -->
-      <div id="atBatSummary">…</div>
-      <button id="exportAtBatBtn">Export At-Bat Summary</button>
-
-      <!-- other buttons (export, heatmap toggle, next batter, tag) -->
-      <button id="exportBtn">Export Stats</button>
-      <button id="heatMapBtn">Heat Map</button>
-      <button id="nextBatterBtn">Next Batter</button>
-      <button id="tagPitchBtn">Tag Pitch</button>
-    </div>
-
-    <!-- RIGHT PANEL: per-batter summary -->
-    <div id="sideRight" class="side-panel">
-      <h3>By Batter</h3>
-      <table class="liveTbl" id="tbl-batter">
-        <thead><tr>
-          <th>Batter</th><th>Early Swing%</th><th>Late Swing%</th>
-          <th>Chase%</th><th>CSW%</th><th>Strike%</th>
-        </tr></thead>
-        <tbody></tbody>
-      </table>
-        <thead>
-          <tr>
-            <th>Batter</th><th>Early Swing%</th><th>Late Swing%</th>
-            <th>Chase%</th><th>CSW%</th><th>Strike%</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- rows still rendered by script.js -->
-        </tbody>
-      </table>
-    </div>
-
-  </div>
-</div>
-
-
 
   <!-- ========= BATTER MANAGEMENT ========= -->
   <div id="batterManagement" style="margin:10px 0;">
@@ -635,8 +563,25 @@
   <button id="heatMapBtn" style="margin-top: 20px;">Heat Map</button>
   <button id="nextBatterBtn" style="margin-top: 20px;">Next Batter</button>
   <button id="tagPitchBtn" style="margin-top: 20px;">Tag Pitch</button>
+</div> <!-- /#mainPanel -->  
+
+
+    <!-- RIGHT PANEL: per-batter summary -->
+    <div id="sideRight" class="side-panel">
+      <h3>By Batter</h3>
+      <table class="liveTbl" id="tbl-batter">
+        <thead><tr>
+          <th>Batter</th><th>Early Swing%</th><th>Late Swing%</th>
+          <th>Chase%</th><th>CSW%</th><th>Strike%</th>
+        </tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div> <!-- closes #liveBPWrapper -->
+</div>   <!-- closes #liveBPMode -->
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
