--- a/index.html
+++ b/index.html
@@ -575,7 +575,8 @@
 
 
 <!-- 4) export buttons row, underneath all three columns -->
-<div id="liveBPActions" style="display:flex; gap:1em; margin-top:1em;">
+<div id="liveBPActionsWrapper" style="text-align:center; margin-top:1em;">
+  <div id="liveBPActions" style="display:inline-flex; gap:1em;">
   <button id="exportAtBatBtn" style="margin-top: 20px;">Export At‑Bat Summary</button>
   <button id="exportBtn" style="margin-top: 20px;">Export Stats</button>
   <button id="heatMapBtn" style="margin-top: 20px;">Heat Map</button>
@@ -586,6 +587,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
