Add intended-zone miss heatmaps

--- a/index.html
+++ b/index.html
@@ -533,6 +533,19 @@
   </div>
 </div>
 
+<div id="missMapContainer" style="display:none;">
+  <div id="missMapHeader">
+    <h3>Natural Miss Heatmaps</h3>
+    <div id="missMapControls">
+      <label>Pitch
+        <select id="missMapPitchType"></select>
+      </label>
+      <span id="missMapStatus" style="margin-left:12px;">Select a pitch type to view miss patterns by intended zone.</span>
+    </div>
+  </div>
+  <div id="missMapCards"></div>
+</div>
+
 
     <!-- Pitch Log for Intended Zone -->
     <div id="intendedZonePitchLog">
